<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/version"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/img_quimera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/quimera2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@null" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bege"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="110dp"
            app:layout_constraintTop_toBottomOf="@+id/img_quimera">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="75dp"
                android:text="@string/dev"
                android:textColor="#535353"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/bordas"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_quimera" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintStart_toStartOf="@id/view_1"
            app:layout_constraintTop_toTopOf="@id/view_1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/user"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/preEmail"
                android:background="@drawable/custom_edit_text"
                android:drawableEnd="@drawable/ic_baseline_how_to_reg_24"
                android:hint="@string/email"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"/>

            <TextView
                style="@style/form"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:text="@string/senhaa"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/password"
                android:background="@drawable/custom_edit_text"
                android:drawableEnd="@android:drawable/ic_lock_idle_lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/remember" />

            <Button
                android:id="@+id/btn_loguin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bottncustom"
                android:text="@string/loguin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cadastro"
                style="@style/form"
                android:text="@string/cadatro"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recuperar"
                style="@style/form"
                android:text="@string/lembrarSenha"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>